<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Region Growing</string>
    <string name="menu_settings">Settings</string>
    <string name="debug_text">DEBUG MENU</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Region Growing</string>
    <string name="title_activity_display_login">Login</string>
    <string name="title_activity_display_reg">Registrieren</string>
    <string name="title_activity_display_game">DisplayGame</string>
    <string name="title_activity_display_daily_task">DisplayDailyTask</string>
    <string name="title_activity_display_task">DisplayTask</string>
    <string name="textfield_login_password">Passwort</string>
    <string name="start_text">Region Growing</string>
    <string name="button_New_Game">Neues Spiel</string>
    <string name="button_login">Login</string>
    <string name="button_register">Registrieren</string>
    <string name="button_continue">Weiter</string>
    <string name="button_exit">Abmelden</string>
    <string name="button_leave">Spiel Verlassen</string>
    <string name="button_options">Optionen</string>
    <string name="button_upd">Aktualisieren</string>
    <string name="button_quit">Beenden</string>
    <string name="textfield_login_email">E-Mail</string>
    <string name="textfield_login_name">Benutzername</string>
    <string name="title_activity_display_new_game">Neues Spiel</string>
    <string name="title_activity_display_enter_game">DisplayEnterGame</string>
    <string name="text_enter_code">Code eingeben:</string>
    <string name="title_activity_display_options">DisplayOptionsActivity</string>
    <string name="text_homelocation">Home Location</string>
    <string name="text_newgame">Neues Spiel</string>
	<string name="text_inf">Einfluss:</string>
	<string name="text_erf">Erfüllt von:</string>
	<string name="text_abgeben">Abgeben</string>
	<string name="text_anzeigen">Bild anzeigen</string>
	<string name="text_bild">Bild aufnehmen</string>
	<string name="text_desc">Bild für die Task</string>
    <string name="text_menu">Hauptmenü</string>
    <string name="text_dailytasks">Daily Tasks</string>
    <string name="text_register">Registrieren</string>
    <string name="text_register_data">Login-Daten:</string>
    <string name="gps_longt">Longitude:</string>
    <string name="gps_latit">Latitute:</string>
    <string name="gps_home">Aktuelle Home Koordinaten:</string>
    <string name="newgame_number">Anzahl der Spieler auswählen (2&#8211;6):</string>
    <string name="options_update">Aktualisieren</string>
    <string name="newgame_search">Spieler suchen</string>
    <string name="game_task">Daily Tasks</string>
</resources>